<?xml version="1.0"?>
<package format="2">
  <name>geranos_kivy_gui</name>
  <version>0.0.0</version>
  <description>A GUI for the Geranos Boreas System</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="bamertsa@ethz.ch">Samuel Bamert</maintainer>
  <maintainer email="rtim@ethz.ch">Tim Reinhart</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <exec_depend>sensor_fusion_comm</exec_depend>
  <exec_depend>gazebo_ros_link_attacher</exec_depend>

  <!-- import error msg from impedance controller -->
  <build_depend>rw_omav_controllers</build_depend>
  <exec_depend>rw_omav_controllers</exec_depend>

  <!-- import motor speed msg -->
  <build_depend>mav_msgs</build_depend>
  <exec_depend>mav_msgs</exec_depend>

  <!-- import odometrey msg -->
  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>

    <!-- import uav state msg -->
  <build_depend>omav_hovery_msgs</build_depend>
  <exec_depend>omav_hovery_msgs</exec_depend>
 
</package>
